[package]
name = "jicli"
version = "0.1.3"
edition = "2021"
authors = ["Sebastian Plaza <sebastianplaza@gmail.com>"]
description = "Simple JIRA client to add worklog time to an issue"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.5", features = ["derive"] }
base64 = "0.13.0"
